force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/leaseworks__Aircraft_Proposal__c.object-meta.xml
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.
[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Asset in Deal</label>
    <nameField>
        <label>Name (MSN)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assets in Deal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>