force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/BAC_Approval_Complete__c.field-meta.xml
<CustomField>
    <fullName>BAC_Approval_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BAC Approval Complete</label>
    <type>Checkbox</type>
</CustomField>