force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/BAC_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>BAC_Approval_Date__c</fullName>
    <label>BAC Approval Date</label>
    <type>Date</type>
</CustomField>