force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/Current_Rent_local__c.field-meta.xml
<CustomField>
    <fullName>Current_Rent_local__c</fullName>
    <formula>if( !isBlank(leaseworks__Aircraft__c)
, leaseworks__Aircraft__r.leaseworks__Lease__r.leaseworks__Base_Rent__c 
, leaseworks__World_Fleet_Aircraft__r.leaseworks__Current_Rent__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>