force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Actual_Aircraft_Price_ex_Cap_Int__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Actual_Aircraft_Price_ex_Cap_Int__c</fullName>
    <label>Actual Aircraft Price (ex Cap Int)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>