force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Actual_Rental__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Actual_Rental__c</fullName>
    <label>Delivery Rent</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>