force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Actual_ROE__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Actual_ROE__c</fullName>
    <label>Actual ROE</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>