force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Age__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Age__c</fullName>
    <formula>CASE((leaseworks__World_Fleet_Aircraft__c), 
     NULL,IF(!ISNULL(leaseworks__Date_of_Manufacture__c ),(TODAY()-leaseworks__Date_of_Manufacture__c)/365,null),
      null
     )</formula>
    <inlineHelpText>Current year - Date of Manufacture</inlineHelpText>
    <label>Age</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>