force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Aircraft__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Aircraft__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Select the asset from your fleet to be included in the deal.</inlineHelpText>
    <label>Asset</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>leaseworks__Aircraft__c.leaseworks__Sold__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Aircraft__c</referenceTo>
    <relationshipLabel>Related Deals</relationshipLabel>
    <relationshipName>Marketing_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>