force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Aircraft_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Aircraft_Type__c</fullName>
    <formula>if(isBlank(leaseworks__Aircraft__c),
   leaseworks__World_Fleet_Aircraft__r.leaseworks__AircraftType__c   ,TEXT(leaseworks__Aircraft__r.leaseworks__Asset_Type_GP__c) )</formula>
    <label>{Aircraft Type}</label>
    <type>Text</type>
</CustomField>