force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Airframe_8Y__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Airframe_8Y__c</fullName>
    <label>Airframe 12Y</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>