force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Approved_Price__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Approved_Price__c</fullName>
    <description>The Amount that is approved by the Lessor</description>
    <inlineHelpText>The amount approved by the Lessor</inlineHelpText>
    <label>Approved Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>