force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Asset_Type__c</fullName>
    <description>Automatically filled by the system with the value of field Aircraft&#39;s Type Variant from the record referenced on Managed Aircraft (leaseworks__Aircraft__c) or, if empty, with the value of field World fleet Aircraft (Type - Series combination) from the record referenced on World Fleet Aircraft (leaseworks__World_Fleet_Aircraft__c)</description>
    <inlineHelpText>If aircraft is not in fleet or in world fleet, please specify Type-Variant here.</inlineHelpText>
    <label>Asset Type Variant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>737-300</fullName>
            </value>
            <value>
                <fullName>737-300SF</fullName>
            </value>
            <value>
                <fullName>737-400</fullName>
            </value>
            <value>
                <fullName>737-400SF</fullName>
            </value>
            <value>
                <fullName>737-500</fullName>
            </value>
            <value>
                <fullName>737-600</fullName>
            </value>
            <value>
                <fullName>737-700</fullName>
            </value>
            <value>
                <fullName>737-800</fullName>
            </value>
            <value>
                <fullName>737-800 Freighter</fullName>
            </value>
            <value>
                <fullName>737-900</fullName>
            </value>
            <value>
                <fullName>737-900ER</fullName>
            </value>
            <value>
                <fullName>737-7Max</fullName>
            </value>
            <value>
                <fullName>737-8MAX</fullName>
            </value>
            <value>
                <fullName>737-9MAX</fullName>
            </value>
            <value>
                <fullName>737-10MAX</fullName>
            </value>
            <value>
                <fullName>737-200Max</fullName>
            </value>
            <value>
                <fullName>747-8F</fullName>
            </value>
            <value>
                <fullName>747-400F</fullName>
            </value>
            <value>
                <fullName>757-200</fullName>
            </value>
            <value>
                <fullName>757-200 (ER)</fullName>
            </value>
            <value>
                <fullName>757-200 (PCF)</fullName>
            </value>
            <value>
                <fullName>757-300</fullName>
            </value>
            <value>
                <fullName>767-200</fullName>
            </value>
            <value>
                <fullName>767-200ER</fullName>
            </value>
            <value>
                <fullName>767-300</fullName>
            </value>
            <value>
                <fullName>767-300ER</fullName>
            </value>
            <value>
                <fullName>767-400</fullName>
            </value>
            <value>
                <fullName>777-200</fullName>
            </value>
            <value>
                <fullName>777-200F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>