force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Awarded_To_Counterparty__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Awarded_To_Counterparty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>_Awarded To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets in Deal</relationshipLabel>
    <relationshipName>Assets_in_Deal</relationshipName>
    <type>Lookup</type>
</CustomField>