force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Created_from_Project__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Created_from_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created From Campaign?</label>
    <type>Checkbox</type>
</CustomField>