force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Current_Market_Value__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Current_Market_Value__c</fullName>
    <formula>leaseworks__World_Fleet_Aircraft__r.leaseworks__CurrentMarketValue_m__c</formula>
    <label>Current Market Value($M)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>