force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Current_Rent_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Current_Rent_Amount__c</fullName>
    <formula>if( !isBlank(leaseworks__Aircraft__c)
 , leaseworks__Aircraft__r.leaseworks__Lease__r.leaseworks__Rent__c 
,  leaseworks__World_Fleet_Aircraft__r.leaseworks__Current_Rent__c 
)</formula>
    <inlineHelpText>Current rent of the selected Aircraft</inlineHelpText>
    <label>Current Rent Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>