force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Customer_Preference__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Customer_Preference__c</fullName>
    <inlineHelpText>Customer preference can be updated before the ragauging lock date</inlineHelpText>
    <label>Customer Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Aircraft_Type</valueSetName>
    </valueSet>
</CustomField>