force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Deal_Type__c</fullName>
    <formula>text(leaseworks__Marketing_Activity__r.leaseworks__Deal_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Type</label>
    <type>Text</type>
</CustomField>