force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Early_Exit_Term__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Early_Exit_Term__c</fullName>
    <label>Early Exit Term (Yrs)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>