force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Engine__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assembly included in the deal</description>
    <inlineHelpText>Assembly included in the deal</inlineHelpText>
    <label>Assembly</label>
    <referenceTo>leaseworks__Constituent_Assembly__c</referenceTo>
    <relationshipName>Asset_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>