force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Engine_LLP_per_Cycle__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_LLP_per_Cycle__c</fullName>
    <label>Engine LLP per Cycle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>