force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Engine_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_Type__c</fullName>
    <description>Engine Type of the selected aircraft.</description>
    <formula>if(isBlank(leaseworks__Aircraft__c),
leaseworks__World_Fleet_Aircraft__r.leaseworks__EngineType__c ,TEXT(leaseworks__Aircraft__r.leaseworks__Engine_Type_GP__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Engine Type of the selected aircraft.</inlineHelpText>
    <label>Engine Type (Aircraft)</label>
    <type>Text</type>
</CustomField>