force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Engine_Type_GP__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_Type_GP__c</fullName>
    <label>Engine Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Engine_Type</valueSetName>
    </valueSet>
</CustomField>