force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Engine_Type_new__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_Type_new__c</fullName>
    <label>Z_Unused_2305_Engine Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Engine</fullName>
            </value>
            <value>
                <fullName>BR700</fullName>
            </value>
            <value>
                <fullName>CF6</fullName>
            </value>
            <value>
                <fullName>CFM56</fullName>
            </value>
            <value>
                <fullName>GE90</fullName>
            </value>
            <value>
                <fullName>GE9X</fullName>
            </value>
            <value>
                <fullName>GEnx</fullName>
            </value>
            <value>
                <fullName>GP7200</fullName>
            </value>
            <value>
                <fullName>JT3</fullName>
            </value>
            <value>
                <fullName>JT3D</fullName>
            </value>
            <value>
                <fullName>JT8D</fullName>
            </value>
            <value>
                <fullName>JT9D</fullName>
            </value>
            <value>
                <fullName>LEAP</fullName>
            </value>
            <value>
                <fullName>PW1000G</fullName>
            </value>
            <value>
                <fullName>PW2000</fullName>
            </value>
            <value>
                <fullName>PW4000</fullName>
            </value>
            <value>
                <fullName>PW6000</fullName>
            </value>
            <value>
                <fullName>RB.183 Tay</fullName>
            </value>
            <value>
                <fullName>RB211</fullName>
            </value>
            <value>
                <fullName>Trent</fullName>
            </value>
            <value>
                <fullName>V2500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>