force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Evaluation_Approach__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Evaluation_Approach__c</fullName>
    <description>Source: Orix</description>
    <label>Evaluation Approach</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IRR</fullName>
                <default>true</default>
                <label>IRR</label>
            </value>
            <value>
                <fullName>NPV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>