force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Inactive_AT__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Inactive_AT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive?</label>
    <type>Checkbox</type>
</CustomField>