force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Investment_Required__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Investment_Required__c</fullName>
    <description>Investment required to restore the condition of the aircraft to the client&#39;s requirements</description>
    <inlineHelpText>Investment required to restore the condition of the aircraft to the client&#39;s requirements</inlineHelpText>
    <label>Investment Required</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>