force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Jr_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Jr_Loan_Amount__c</fullName>
    <description>Junior Loan Amount</description>
    <inlineHelpText>Junior Loan Amount</inlineHelpText>
    <label>Jr Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>