force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Lease__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Lease</label>
    <referenceTo>leaseworks__Lease__c</referenceTo>
    <relationshipLabel>Assets in Deal (Lease)</relationshipLabel>
    <relationshipName>Assets_in_Deal</relationshipName>
    <type>Lookup</type>
</CustomField>