force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Lease_Remaining_Term_on_Bid__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_Remaining_Term_on_Bid__c</fullName>
    <inlineHelpText>Remaining months left on the asset&#39;s lease (if any) at the time the latest bid was placed on it by the related Prospect and Campaign</inlineHelpText>
    <label>Lease Remaining Term on Bid</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>