force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Lease_Terms__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Draft lease terms as negotiated with the prospect</description>
    <inlineHelpText>Draft lease terms as negotiated with the prospect</inlineHelpText>
    <label>Detailed Lease Terms</label>
    <referenceTo>leaseworks__Lease__c</referenceTo>
    <relationshipName>Aircraft_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>