force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__LeaseTerm_Expires_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__LeaseTerm_Expires_Date__c</fullName>
    <label>LeaseTerm Expires Date</label>
    <type>Date</type>
</CustomField>