force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Lessee_Amortized_Mods__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessee_Amortized_Mods__c</fullName>
    <label>Lessee Amortized Mods</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>