force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Manufacturer_GP__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Manufacturer_GP__c</fullName>
    <label>Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Manufacturer_Global</valueSetName>
    </valueSet>
</CustomField>