force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Marketing_Activity__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Marketing_Activity__c</fullName>
    <label>Deal</label>
    <referenceTo>leaseworks__Marketing_Activity__c</referenceTo>
    <relationshipName>Aircraft_Proposals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>