force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Months_Granted_by_Lessor__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Months_Granted_by_Lessor__c</fullName>
    <label>Months Granted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>