force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Months_Requested_by_Lessee__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Months_Requested_by_Lessee__c</fullName>
    <label>Months Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>