force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__MSN_E__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MSN_E__c</fullName>
    <label>MSN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>