force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__MTOW__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MTOW__c</fullName>
    <formula>if(isBlank(leaseworks__Aircraft__c),
leaseworks__World_Fleet_Aircraft__r.leaseworks__MTOW__c ,leaseworks__Aircraft__r.leaseworks__Maximum_Operational_Take_Lbs__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_MTOW (lbs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>