force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__NBV__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__NBV__c</fullName>
    <formula>leaseworks__Aircraft__r.leaseworks__NBV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NBV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>