force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Notice_Period__c</fullName>
    <label>Notice Period (mos)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>