force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__NPV__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__NPV__c</fullName>
    <description>Source : Orix</description>
    <label>NPV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>