force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Payment_Relief_Granted__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payment_Relief_Granted__c</fullName>
    <formula>leaseworks__Months_Granted_by_Lessor__c  *   leaseworks__Current_Rent_Amount__c *  leaseworks__Percent_of_Rent_Granted_To_Be_Deferred__c</formula>
    <label>Relief Granted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>