force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Percentage_Bid_Change__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Percentage_Bid_Change__c</fullName>
    <inlineHelpText>Percentage difference between the first and the last bid placed on this Asset by the related Prospect and Campaign. This value is positive when the last bid is higher than the initial bid, negative otherwise.</inlineHelpText>
    <label>Percentage Bid Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>