force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Potential_Amount_Lost__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Potential_Amount_Lost__c</fullName>
    <formula>leaseworks__Rent_Remaining__c  -  leaseworks__Rent_Remaining_To_Collect_As_Requested__c</formula>
    <inlineHelpText>Original rent remaining to collect - Rent remaining to collect as per request</inlineHelpText>
    <label>Potential Amount Lost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>