force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Pricing_Analysis_Check__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Pricing_Analysis_Check__c</fullName>
    <label>Data Check</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Not Activated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>