force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Project_Comments__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Project_Comments__c</fullName>
    <label>Campaign Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>