force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Purchase_Price__c</fullName>
    <description>Purchase price, if this is a sale lease back</description>
    <inlineHelpText>Purchase price, if this is a sale lease back</inlineHelpText>
    <label>Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>