force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Regauging_Lock_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Regauging_Lock_Date__c</fullName>
    <inlineHelpText>Customer preference can be updated before the ragauging lock date</inlineHelpText>
    <label>Regauging Lock Date</label>
    <type>Date</type>
</CustomField>