force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Rent_Remaining_To_Collect_As_Requested__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Remaining_To_Collect_As_Requested__c</fullName>
    <formula>((leaseworks__Current_Rent_Amount__c - (leaseworks__Current_Rent_Amount__c *leaseworks__Percent_Of_Rent_Requested_To_Be_Deferred__c))*  leaseworks__Months_Requested_by_Lessee__c)  + leaseworks__Current_Rent_Amount__c * ( leaseworks__Lease_Term_Remaining__c  -  leaseworks__Months_Requested_by_Lessee__c )</formula>
    <label>Rent Remaining To Collect (As Requested)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>