force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Rent_to_be_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_to_be_Adjusted__c</fullName>
    <formula>If( !IsBlank(leaseworks__Effective_Amount_Lost__c),(leaseworks__Effective_Amount_Lost__c)/

(((YEAR(leaseworks__Y_Hidden_Lease_End_Date__c) - YEAR(leaseworks__Payback_Period_Start_Month__c))*12) + (MONTH(leaseworks__Y_Hidden_Lease_End_Date__c) - MONTH(leaseworks__Payback_Period_Start_Month__c)))

, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Rent to be adjusted every month starting from the payback period to recover the lost amount.</inlineHelpText>
    <label>Rent To Be Adjusted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>