force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Retained_Reserves__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Retained_Reserves__c</fullName>
    <label>Retained Reserves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>