force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Serial_Number__c</fullName>
    <formula>if(isBlank(leaseworks__MSN_E__c),
   leaseworks__ESN__c   ,leaseworks__MSN_E__c)</formula>
    <label>Serial Number</label>
    <type>Text</type>
</CustomField>