force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Updated_Offer__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Updated_Offer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated Offer</label>
    <type>Checkbox</type>
</CustomField>