force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__WF_Aircraft_Age__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__WF_Aircraft_Age__c</fullName>
    <formula>leaseworks__World_Fleet_Aircraft__r.leaseworks__AircraftAge__c</formula>
    <label>WF Aircraft Age</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>