force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Y_hidden_Awarded_To_Airline__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_hidden_Awarded_To_Airline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Unused_OP {Awarded To Airline}</label>
    <referenceTo>leaseworks__Operator__c</referenceTo>
    <relationshipLabel>Z_Unused_OP Assets in Deal</relationshipLabel>
    <relationshipName>Asset_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>