force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Y_Hidden_Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Deal_Type__c</fullName>
    <formula>/* if Lease than 1, if SLB then 2, else 3*/
 if( 
   contains(text(leaseworks__Marketing_Activity__r.leaseworks__Deal_Type__c),&#39;Lease&#39;),&#39;1&#39;,
     if(text(leaseworks__Marketing_Activity__r.leaseworks__Deal_Type__c)==&#39;SLB&#39;,&#39;2&#39;,&#39;3&#39;  )
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Deal Type</label>
    <type>Text</type>
</CustomField>