force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Y_Hidden_Effective_Amount_Lost__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Effective_Amount_Lost__c</fullName>
    <label>_Effective_Amount_Lost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>