force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Y_Hidden_Operator_Id__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Operator_Id__c</fullName>
    <formula>/*if(ISNULL(Marketing_Activity__r.Counter_Party__c),
null, 
if(TEXT(Marketing_Activity__r.Counter_Party__r.Type) ==&#39;Operator&#39;, 
CASESAFEID(Marketing_Activity__r.Counter_Party__c),
null))*/ null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_OP {Operator Id}</label>
    <type>Text</type>
</CustomField>