force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Y_Hidden_Payment_Relief_Requested__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Payment_Relief_Requested__c</fullName>
    <label>_Payment_Relief_Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>