force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/leaseworks__Y_Hidden_Prospect_Name__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Prospect_Name__c</fullName>
    <formula>/*Marketing_Activity__r.Prospect_Name__c*/null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_OP {Prospect Name}</label>
    <type>Text</type>
</CustomField>