force-app/main/default/objects/leaseworks__Aircraft_Proposal__c/fields/LOI_Date__c.field-meta.xml
<CustomField>
    <fullName>LOI_Date__c</fullName>
    <description>The date at which Letter of Intent (LOI) is executed for a given Asset in Deal</description>
    <inlineHelpText>The date at which Letter of Intent (LOI) is executed for a given Asset in Deal</inlineHelpText>
    <label>LOI Date</label>
    <type>Date</type>
</CustomField>